# myhh

./: .clang-format  CMakeLists.txt  README.md  handmadehero_sdl2.cpp  main.cpp
cmake/: FindSDL2.cmake
deprecated/: main.cpp  main.h
